# NonogramSolver

./: .dockerignore  Cargo.toml  Dioxus.toml  Dockerfile  README.md  index.html
archive/: Cell.py  NonogramSolver.pyde  nonogram_crawler.py  one_line_solver.py  puzzle_reader.py
archive/puzzle/: 19048.txt  36666.txt  463.txt
assets/: style.css
src/: components.rs  lib.rs  main.rs  nonogram_solver.rs  one_line_solver.rs  puzzle_crawler.rs
src/components/: github_corner.rs  puzzle_grid.rs  puzzle_viewer.rs
tests/: solve_puzzles.rs
