[package]
name = "nonogram-solver"
version = "0.1.0"
authors = ["willwang-io <hello@willwang.io>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack"] }
serde = { version = "1", features = ["derive"] }
reqwest = "0.13.1"


[features]
default = ["web", "server"]
web = ["dioxus/web"]
server = ["dioxus/server"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
